--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<h1>Wybierz kamień papier lub nożyce</h1>
+		<div id="buttons">
+			<button id="play-rock">Kamień</button>
+			<button id="play-paper">Papier</button>
+			<button id="play-scissors">Nożyce</button>
+		</div><br>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
