--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<div class="container">
 		<h1>Wybierz kamień papier lub nożyce</h1>
 		<div id="buttons">
-			<button id="play-rock">Kamień</button>
-			<button id="play-paper">Papier</button>
-			<button id="play-scissors">Nożyce</button>
+			<button id="play-rock" type="button">Kamień</button>
+			<button id="play-paper" type="button">Papier</button>
+			<button id="play-scissors" type="button">Nożyce</button>
 		</div><br>
 		<div id="messages"></div>
 	</div>
